<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.TrainFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.025" />

    <TextView
        android:id="@+id/train_label_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/train_label_text"
        android:textSize="36sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <ToggleButton
        android:id="@+id/onRoad_toggleButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:textOff="@string/onRoad_button_text"
        android:textOn="@string/onRoad_button_text"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/train_label_textView" />

    <ToggleButton
        android:id="@+id/onSidewalk_toggleButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:textOff="@string/onSidewalk_button_text"
        android:textOn="@string/onSidewalk_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/train_label_textView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <fragment
        android:id="@+id/mapFragment"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onSidewalk_toggleButton" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.66"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/train_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:text="@string/train_switch_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/train_label_textView"
        app:layout_constraintStart_toEndOf="@+id/train_label_textView"
        app:layout_constraintTop_toTopOf="@+id/train_label_textView" />

    <TextView
        android:id="@+id/lte_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/lte_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <TextView
        android:id="@+id/lte_rsrp_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lte_rsrp_label_text"
        app:layout_constraintStart_toStartOf="@+id/lte_textView"
        app:layout_constraintTop_toBottomOf="@+id/lte_textView" />

    <TextView
        android:id="@+id/lte_rsrq_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lte_rsrq_label_text"
        app:layout_constraintStart_toStartOf="@+id/lte_rsrp_textView"
        app:layout_constraintTop_toBottomOf="@+id/lte_rsrp_textView" />

    <TextView
        android:id="@+id/lte_rssnr_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lte_rssnr_label_text"
        app:layout_constraintStart_toStartOf="@+id/lte_rsrq_textView"
        app:layout_constraintTop_toBottomOf="@+id/lte_rsrq_textView" />

    <TextView
        android:id="@+id/lte_cqi_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lte_cqi_label_text"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toEndOf="@+id/lte_rsrp_textView"
        app:layout_constraintTop_toTopOf="@+id/lte_rsrp_textView" />

    <TextView
        android:id="@+id/lte_dbm_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lte_dbm_label_text"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/lte_cqi_textView"
        app:layout_constraintTop_toBottomOf="@+id/lte_cqi_textView" />

    <TextView
        android:id="@+id/lte_asu_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lte_asu_label_text"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/lte_dbm_textView"
        app:layout_constraintTop_toBottomOf="@+id/lte_dbm_textView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.80" />

    <TextView
        android:id="@+id/gps_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/gps_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <TextView
        android:id="@+id/gps_lat_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gps_lat"
        app:layout_constraintStart_toStartOf="@+id/gps_textView"
        app:layout_constraintTop_toBottomOf="@+id/gps_textView" />

    <TextView
        android:id="@+id/gps_lon_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gps_lon"
        app:layout_constraintStart_toStartOf="@+id/gps_lat_textView"
        app:layout_constraintTop_toBottomOf="@+id/gps_lat_textView" />

    <TextView
        android:id="@+id/gps_acc_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gps_acc"
        app:layout_constraintStart_toStartOf="@+id/gps_lon_textView"
        app:layout_constraintTop_toBottomOf="@+id/gps_lon_textView" />

    <TextView
        android:id="@+id/heading_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/heading_text"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <TextView
        android:id="@+id/heading_deg_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heading_deg_text"
        app:layout_constraintStart_toStartOf="@+id/heading_textView"
        app:layout_constraintTop_toBottomOf="@+id/heading_textView" />

    <TextView
        android:id="@+id/mag_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/mag_text"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <TextView
        android:id="@+id/mag_x_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mag_x_text"
        app:layout_constraintStart_toStartOf="@+id/mag_textView"
        app:layout_constraintTop_toBottomOf="@+id/mag_textView" />

    <TextView
        android:id="@+id/mag_y_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mag_y_text"
        app:layout_constraintStart_toStartOf="@+id/mag_x_textView"
        app:layout_constraintTop_toBottomOf="@+id/mag_x_textView" />

    <TextView
        android:id="@+id/mag_z_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mag_z_text"
        app:layout_constraintStart_toStartOf="@+id/mag_y_textView"
        app:layout_constraintTop_toBottomOf="@+id/mag_y_textView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.975" />

</androidx.constraintlayout.widget.ConstraintLayout>